Refactor CSS styles and update content in App.js

--- a/micael-portfolio/src/App.css
+++ b/micael-portfolio/src/App.css
@@ -73,7 +73,7 @@
 
 .part1 h1{
 
-  font-size: 128px;
+  font-size: 10rem;
   margin: 0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-decoration: underline;
