--- a/micael-portfolio/src/App.css
+++ b/micael-portfolio/src/App.css
@@ -12,10 +12,11 @@
 .header {
 
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-between;
   padding: 30px 0;
   width: 90%;
+  height: 10vh;
 
 }
 
@@ -24,6 +25,36 @@
   font-size: 2.5rem;
   margin: 0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.header .menu {
+
+  display: flex;
+  flex-direction: row;
+
+}
+
+.header .menu a {
+
+  font-size: 1.5rem;
+  margin: 0 20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-decoration: none;
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+}
+
+.header .menu a:hover {
+
+  color: rgb(0, 175, 0);
+  cursor: pointer;
 
 }
 
@@ -33,7 +64,7 @@
   align-items: center;
   flex-direction: row;
   background-color: rgb(0, 175, 0);
-  height: 600px;
+  height: 90vh;
   width: 100%;
 
 }
@@ -129,6 +160,70 @@
 
 }
 
+.contacts{
+
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(0, 175, 0);
+  width: 100%;
+  padding: 50px 0;
+
+}
+
+.contacts-item{
+
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: ease 0.5s;
+  margin: 50px;
+  position: relative; 
+  font-weight: bold;
+
+}
+
+.contacts-item:hover{
+
+  transform: scale(1.1);
+  cursor: pointer;
+
+}
+
+.contacts-item:hover:nth-child(2){
+
+  transform: none;
+
+}
+
+.nameContacts{
+
+  font-size: 2.4rem;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  margin: 0 20px;
+  background-color: black;
+  color: rgb(0, 175, 0);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+
+}
+
+.link {
+
+  position: absolute;
+  top: 10px; 
+  right: 10px; 
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+
+}
+
 .project-item, .languages-item, .technologies-item {
 
   background-color: #000000;
@@ -139,6 +234,7 @@
   align-items: center;
   transition: ease 0.5s;
   padding: 100px 0;
+  position: relative; 
 
 }
 
@@ -234,9 +330,30 @@
 
 }
 
+.languages-item:nth-child(5) h1{
+
+  font-size: 40px;
+  color: rgb(61, 168, 255);
+
+}
+
+.languages-item:nth-child(6) h1{
+
+  font-size: 40px;
+  color: rgb(0, 102, 255);
+
+}
+
 .technologies-item:first-child h1{
 
+  font-size: 40px;
+  color: white;
 
-    color: white;
+}
+
+.technologies-item:nth-child(2) h1{
+
+  font-size: 40px;
+  color: rgb(0, 140, 255);
 
 }
