--- a/src/App.css
+++ b/src/App.css
@@ -16,12 +16,12 @@
   height: 10vh;
 }
 
-
 .header h1 {
   font-size: 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .header .menu {
@@ -58,13 +58,6 @@
   width: 100%;
 }
 
-.about p {
-
-  font-size: 1.3rem;
-  margin: 100px;
-  font-family: monospace
-}
-
 .part1 {
 
   width: 70%;
@@ -74,6 +67,25 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  background-color: #000000;
+  color: white;
+
+}
+
+.part1 h1 {
+
+  font-size: 6.5rem;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-decoration: underline;
+
+}
+
+.part1 p {
+
+  font-size: 1.2rem;
+  line-height: 1.5;
+  font-family: monospace;
+  width: 60%;
 
 }
 
@@ -82,17 +94,6 @@
   background-color: rgb(0, 175, 0);
   width: 30%;
 
-}
-
-.part1 {
-
-  background-color: rgb(0, 0, 0);
-  color: white;
-
-}
-
-.part1 h1 {
-  font-size: 10rem;
 }
 
 .linePortfolio {
@@ -121,9 +122,9 @@
 
 }
 
-.nameProjects {
+.nameProjects, .nameTechnologies, .nameLanguages, .nameFrameworks {
 
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin: 0 20px;
   background-color: rgb(0, 175, 0);
@@ -131,12 +132,14 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  text-decoration: underline;
 
 }
 
 .projects,
 .languages,
-.technologies {
+.technologies,
+.frameworks {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
@@ -152,7 +155,7 @@
   justify-content: space-between;
   background-color: rgb(0, 175, 0);
   width: 100%;
-  padding: 50px 0;
+  font-size: 1.3rem;
 
 }
 
@@ -211,7 +214,8 @@
 
 .project-item,
 .languages-item,
-.technologies-item {
+.technologies-item,
+.frameworks-item {
 
   background-color: #000000;
   text-align: center;
@@ -227,7 +231,8 @@
 
 .project-item:hover,
 .languages-item:hover,
-.technologies-item:hover {
+.technologies-item:hover,
+.frameworks-item:hover {
 
   transform: scale(1.1);
   cursor: pointer;
@@ -278,20 +283,6 @@
 
 }
 
-.nameLanguages,
-.nameTechnologies {
-
-  font-size: 2.4rem;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  margin: 0 20px;
-  background-color: rgb(0, 175, 0);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-
-}
-
 .languages-item:first-child h1 {
 
   font-size: 40px;
@@ -323,14 +314,35 @@
 .languages-item:nth-child(5) h1 {
 
   font-size: 40px;
-  color: rgb(61, 168, 255);
+  color: rgb(0, 102, 255);
 
 }
 
-.languages-item:nth-child(6) h1 {
+.frameworks-item:first-child h1 {
 
   font-size: 40px;
-  color: rgb(0, 102, 255);
+  color: rgb(0, 247, 255);
+
+}
+
+.frameworks-item:nth-child(2) h1 {
+
+  font-size: 40px;
+  color: rgb(217, 255, 0);
+
+}
+
+.frameworks-item:nth-child(3) h1 {
+
+  font-size: 40px;
+  color: rgb(0, 132, 255);
+
+}
+
+.frameworks-item:nth-child(4) h1 {
+
+  font-size: 40px;
+  color: rgb(0, 255, 0);
 
 }
 
@@ -345,6 +357,13 @@
 
   font-size: 40px;
   color: rgb(0, 140, 255);
+
+}
+
+.technologies-item:nth-child(3) h1 {
+
+  font-size: 40px;
+  color: rgb(0, 132, 255);
 
 }
 
@@ -370,6 +389,10 @@
     margin: 10px 0;
   }
 
+  .about {
+    height: auto;
+    width: 100%;
+  }
 
   .about p {
     margin: 20px;
@@ -377,12 +400,15 @@
   }
 
   .part1 h1 {
+
     font-size: 4rem;
+
   }
 
   .projects,
   .languages,
-  .technologies {
+  .technologies,
+  .frameworks {
     grid-template-columns: 1fr;
     gap: 20px;
   }
@@ -406,29 +432,5 @@
   .lineCV a {
     width: 80%;
     padding: 15px 0;
-  }
-}
-
-@media (max-width: 480px) {
-  .header h1 {
-    font-size: 1.8rem;
-  }
-
-  .header .menu a {
-    font-size: 1rem;
-    margin: 5px 0;
-  }
-
-  .about p {
-    font-size: 0.9rem;
-  }
-
-  .part1 h1 {
-    font-size: 3rem;
-  }
-
-  .lineCV a {
-    font-size: 1rem;
-    padding: 10px 0;
   }
 }
