--- a/src/App.css
+++ b/src/App.css
@@ -8,30 +8,55 @@
 }
 
 .header {
+
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 30px 0;
   width: 90%;
   height: 10vh;
+
 }
 
 .header h1 {
+
   font-size: 1.5rem;
+  margin: 0;
+  display: flex;
+  align-items: center;
+
+}
+
+.header .menu button{
+
+  font-size: 1.5rem;
+  margin: 0 20px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  text-decoration: none;
+  color: black;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: transparent;
+  border: none;
+
 }
 
-.header .menu {
+.header .menu button:hover {
+
+  color: rgb(0, 175, 0);
+  cursor: pointer;
+
+}
+
+.menu {
 
   display: flex;
   flex-direction: row;
 
 }
 
-.header .menu a {
+.menu a {
 
   font-size: 1.5rem;
   margin: 0 20px;
@@ -44,7 +69,7 @@
 
 }
 
-.header .menu a:hover {
+.menu a:hover {
 
   color: rgb(0, 175, 0);
   cursor: pointer;
