--- a/src/App.css
+++ b/src/App.css
@@ -372,6 +372,13 @@
 
 }
 
+.frameworks-item:nth-child(5) h1 {
+
+  font-size: 40px;
+  color: rgb(218, 0, 0);
+
+}
+
 .technologies-item:first-child h1 {
 
   font-size: 40px;
@@ -390,6 +397,13 @@
 
   font-size: 40px;
   color: rgb(0, 132, 255);
+
+}
+
+.technologies-item:nth-child(4) h1 {
+
+  font-size: 40px;
+  color: rgb(255, 255, 255);
 
 }
 
