--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  scroll-behavior: smooth;
 }
 
 .header {
@@ -24,7 +25,7 @@
   margin: 0;
   display: flex;
   align-items: center;
-  width: 50%;
+  width: 40%;
 
 }
 
@@ -40,6 +41,7 @@
   justify-content: center;
   background-color: transparent;
   border: none;
+  width: 100px;
 
 }
 
@@ -150,7 +152,7 @@
 
 .nameProjects, .nameTechnologies, .nameLanguages, .nameFrameworks {
 
-  font-size: 2rem;
+  font-size: 1.5rem;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin: 0 20px;
   background-color: rgb(0, 175, 0);
@@ -159,6 +161,8 @@
   align-items: center;
   width: 100%;
   text-decoration: underline;
+  border-top: 5px solid black;
+  border-bottom: 5px solid black;
 
 }
 
