--- a/src/App.css
+++ b/src/App.css
@@ -22,10 +22,12 @@
 .header h1 {
 
   font-size: 1.5rem;
-  margin: 0;
   display: flex;
   align-items: center;
-  width: 40%;
+  width: 100%;
+  height: 50px;
+  display: flex;
+  justify-content: center;
 
 }
 
@@ -91,7 +93,6 @@
   width: 70%;
   height: 100%;
   display: flex;
-  padding: 0 50px;
   align-items: center;
   justify-content: center;
   flex-direction: column;
@@ -113,7 +114,8 @@
   font-size: 1.2rem;
   line-height: 1.2;
   font-family: monospace;
-  width: 60%;
+  width: 90%;
+  padding: 50px 0;
 
 }
 
