--- a/src/App.css
+++ b/src/App.css
@@ -126,7 +126,7 @@
 
 .nameProjects, .nameTechnologies, .nameLanguages, .nameFrameworks {
 
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   margin: 0 20px;
   background-color: rgb(0, 175, 0);
@@ -134,7 +134,6 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  text-decoration: underline;
   border-top: 5px solid black;
   border-bottom: 5px solid black;
 
@@ -393,8 +392,13 @@
   }
 
   .header h1 {
+
     font-size: 1.2rem;
-    text-align: center;
+    width: 100%;
+    display: flex;
+    height: 70px;
+    justify-content: center;
+    
   }
 
   .header .menu {
