--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+/* Body */
 .body {
   margin: 0;
   padding: 0;
@@ -8,6 +9,7 @@
   scroll-behavior: smooth;
 }
 
+/* Header */
 .header {
 
   display: flex;
@@ -36,7 +38,21 @@
   width: 50%;
   font-family: monospace;
   font-size: 1.2rem;
+
+}
+
+.header .menu a {
+
+  text-decoration: none;
   color: rgb(0, 175, 0);
+  transition: ease 0.5s;
+  font-weight: bold;
+
+}
+
+.header .menu a:hover {
+
+  color: rgb(0, 0, 0);
   cursor: pointer;
 
 }
@@ -84,9 +100,9 @@
 .part1 p {
 
   font-size: 1.2rem;
-  line-height: 1.2;
-  font-family: monospace;
-  width: 90%;
+  line-height: 1.5;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  width: 80%;
   padding: 50px 0;
 
 }
@@ -124,7 +140,10 @@
 
 }
 
-.nameProjects, .nameTechnologies, .nameLanguages, .nameFrameworks {
+.nameProjects, 
+.nameTechnologies, 
+.nameLanguages, 
+.nameFrameworks {
 
   font-size: 1.3rem;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -146,8 +165,25 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  width: 90%;
+  width: 70%;
   margin: 50px 0;
+}
+
+.project-item,
+.languages-item,
+.technologies-item,
+.frameworks-item {
+
+  background-color: #000000;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  transition: ease 0.5s;
+  padding: 100px 0;
+  position: relative;
+
 }
 
 .contacts {
@@ -215,23 +251,6 @@
 
 }
 
-.project-item,
-.languages-item,
-.technologies-item,
-.frameworks-item {
-
-  background-color: #000000;
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  transition: ease 0.5s;
-  padding: 100px 0;
-  position: relative;
-
-}
-
 .project-item:hover,
 .languages-item:hover,
 .technologies-item:hover,
@@ -288,112 +307,100 @@
 
 .languages-item:first-child h1 {
 
-  font-size: 40px;
   color: rgb(0, 225, 255);
 
 }
 
 .languages-item:nth-child(2) h1 {
 
-  font-size: 40px;
   color: rgb(255, 0, 0);
 
 }
 
 .languages-item:nth-child(3) h1 {
 
-  font-size: 40px;
   color: rgb(255, 255, 0);
 
 }
 
 .languages-item:nth-child(4) h1 {
 
-  font-size: 40px;
   color: rgb(255, 255, 0);
 
 }
 
 .languages-item:nth-child(5) h1 {
 
-  font-size: 40px;
   color: rgb(0, 102, 255);
 
 }
 
 .frameworks-item:first-child h1 {
 
-  font-size: 40px;
   color: rgb(0, 247, 255);
 
 }
 
 .frameworks-item:nth-child(2) h1 {
 
-  font-size: 40px;
   color: rgb(217, 255, 0);
 
 }
 
 .frameworks-item:nth-child(3) h1 {
 
-  font-size: 40px;
   color: rgb(0, 132, 255);
 
 }
 
 .frameworks-item:nth-child(4) h1 {
 
-  font-size: 40px;
   color: rgb(0, 255, 0);
 
 }
 
 .frameworks-item:nth-child(5) h1 {
 
-  font-size: 40px;
   color: rgb(218, 0, 0);
 
 }
 
 .technologies-item:first-child h1 {
 
-  font-size: 40px;
   color: white;
 
 }
 
 .technologies-item:nth-child(2) h1 {
 
-  font-size: 40px;
   color: rgb(0, 140, 255);
 
 }
 
 .technologies-item:nth-child(3) h1 {
 
-  font-size: 40px;
   color: rgb(0, 132, 255);
 
 }
 
 .technologies-item:nth-child(4) h1 {
 
-  font-size: 40px;
   color: rgb(255, 255, 255);
 
 }
 
 @media (max-width: 768px) {
+
   .header {
+
     flex-direction: column;
     align-items: center;
     height: auto;
+
   }
 
   .header h1 {
 
-    font-size: 1.2rem;
     width: 100%;
     display: flex;
     height: 70px;
