--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 30px 0;
-  width: 90%;
+  width: 95%;
   height: 10vh;
 
 }
@@ -66,7 +66,7 @@
 
 .part1 {
 
-  width: 70%;
+  width: 80%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -82,6 +82,7 @@
   font-size: 5rem;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-decoration: underline;
+  margin-bottom: 0;
 
 }
 
@@ -98,7 +99,7 @@
 .part2 {
 
   background-color: rgb(0, 175, 0);
-  width: 30%;
+  width: 20%;
 
 }
 
@@ -150,11 +151,25 @@
 .languages,
 .technologies,
 .frameworks {
+
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  width: 60%;
+  width: 90%;
   margin: 50px 0;
+
+}
+
+.contacts {
+
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
+  background-color: rgb(0, 175, 0);
+  width: 100%;
+  font-size: 1.3rem;
+
 }
 
 .project-item,
@@ -171,21 +186,19 @@
   transition: ease 0.5s;
   padding: 50px;
   position: relative;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
   font-weight: bold;
   color: white;
 
 }
 
-.contacts {
+.project-item:hover,
+.languages-item:hover,
+.technologies-item:hover,
+.frameworks-item:hover {
 
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  justify-content: space-between;
-  background-color: rgb(0, 175, 0);
-  width: 100%;
-  font-size: 1.3rem;
+  transform: scale(1.05);
+  cursor: pointer;
 
 }
 
@@ -238,16 +251,6 @@
   right: 10px;
   width: 30px;
   height: 30px;
-  cursor: pointer;
-
-}
-
-.project-item:hover,
-.languages-item:hover,
-.technologies-item:hover,
-.frameworks-item:hover {
-
-  transform: scale(1.1);
   cursor: pointer;
 
 }
