--- a/src/App.css
+++ b/src/App.css
@@ -13,47 +13,17 @@
 .header {
 
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  align-items: center;
+  justify-content: center;
   padding: 30px 0;
-  width: 95%;
+  width: 100%;
   height: 10vh;
 
 }
 
 .header h1{
 
-  display: flex;
-  align-items: center;
   font-size: 1rem;
-  width: 50%;
-
-}
-
-.header .menu{
-
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  width: 50%;
-  font-family: monospace;
-
-}
-
-.header .menu a {
-
-  text-decoration: none;
-  color: rgb(0, 175, 0);
-  transition: ease 0.5s;
-  font-weight: bold;
-  font-size: 1rem;
-
-}
-
-.header .menu a:hover {
-
-  color: rgb(0, 0, 0);
-  cursor: pointer;
 
 }
 
@@ -77,6 +47,33 @@
 
 }
 
+.part1 .menu{
+
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  width: 50%;
+  font-family: monospace;
+
+}
+
+.part1 .menu a {
+
+  text-decoration: none;
+  color: rgb(0, 175, 0);
+  transition: ease 0.5s;
+  font-weight: bold;
+  font-size: 1rem;
+
+}
+
+.part1 .menu a:hover {
+
+  color: rgb(255, 255, 255);
+  cursor: pointer;
+
+}
+
 .part1 h1 {
 
   font-size: 5rem;
@@ -93,13 +90,14 @@
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   width: 80%;
   padding: 50px 0;
+  text-align: center;
 
 }
 
 .part2 {
 
   background-color: rgb(0, 175, 0);
-  width: 20%;
+  width: 10%;
 
 }
 
@@ -390,24 +388,25 @@
     flex-direction: column;
     align-items: center;
     height: auto;
+    height: 20vh;
 
   }
 
   .header h1 {
 
-    width: 100%;
     display: flex;
-    height: 70px;
+    font-size: 0.8rem;
     justify-content: center;
     
   }
 
-  .header .menu {
+  .part1 .menu {
+    margin-top: 30px;
     flex-direction: column;
     align-items: center;
   }
 
-  .header .menu a {
+  .part1 .menu a {
     font-size: 1.2rem;
     margin: 10px 0;
   }
