--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,12 @@
 }
 
 .about {
+
   display: flex;
   flex-direction: row;
   height: 90vh;
   width: 100%;
+
 }
 
 .part1 {
@@ -40,7 +42,6 @@
   height: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
   background-color: #000000;
   color: white;
@@ -54,6 +55,7 @@
   justify-content: space-around;
   width: 50%;
   font-family: monospace;
+  margin-bottom: 50px;
 
 }
 
@@ -153,7 +155,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 30px;
-  width: 90%;
+  width: 70%;
   margin: 50px 0;
 
 }
@@ -166,7 +168,8 @@
   justify-content: space-between;
   background-color: rgb(0, 175, 0);
   width: 100%;
-  font-size: 1.3rem;
+  font-size: 1.1rem;
+  font-family: 'Courier New', Courier, monospace;
 
 }
 
@@ -280,8 +283,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 30%;
-  padding: 20px 0;
+  width: 100%;
+  padding: 20px;
   border: none;
   transition: ease 0.5s;
   border: 5px solid rgb(0, 0, 0);
@@ -324,6 +327,18 @@
 .languages-item:nth-child(5) p {
 
   color: rgb(0, 102, 255);
+
+}
+
+.languages-item:nth-child(6) p {
+
+  color: rgb(0, 81, 255);
+
+}
+
+.languages-item:nth-child(7) p {
+
+  color: rgb(0, 68, 214);
 
 }
 
@@ -380,6 +395,25 @@
   color: rgb(255, 255, 255);
 
 }
+
+.technologies-item:nth-child(5) p {
+
+  color: rgb(255, 102, 0);
+
+}
+
+.technologies-item:nth-child(6) p {
+
+  color: rgb(255, 102, 0);
+
+}
+
+.technologies-item:nth-child(7) p {
+
+  color: rgb(255, 255, 255);
+
+}
+
 
 @media (max-width: 768px) {
 
@@ -451,8 +485,4 @@
     font-size: 1.3rem;
   }
 
-  .lineCV a {
-    width: 80%;
-    padding: 15px 0;
-  }
 }
